<resources>
    <string name="app_name">Help Me Chat</string>
    <string name="Enter_Message">Enter Message…</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="dob">Select Date of Birth</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="Sign_in">LOGIN</string>
    <string name="Remember">Remember Me?</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="search_radius">Choose Search Radius</string>
    <string name="Country_Radius">Country Radius</string>
    <string name="Kilometre_Radius">Kilometer Radius</string>
    <string name="specific">Specific City Users</string>
    <string name="specific_desc">Search for specific city that you want to chat with other users in the city.</string>
    <string name="Around_Me_Users">Around Me Users</string>
    <string name="around_desc">Search for users around you! either in your country or in specified kilometer radius.</string>
    <string name="Get_Free_Points">Get Free Points</string>
    <string name="points_desc">Watch video ads to get points! points enable you to chat with other users.</string>
    <string name="no_messages">You don\'t have any messages right now!</string>
    <string name="Logout">Logout</string>
    <string name="Unknown">Unknown</string>
    <string name="Creating_Account">Creating Account</string>
    <string name="Please_Wait">Please Wait!</string>
    <string name="created">Account created!</string>
    <string name="taken">Username is already taken please try a different name!</string>
    <string name="dont_match">Passwords don\'t match!</string>
    <string name="fill">Please fill in the fields!</string>
    <string name="searching">Searching For People In Your Country!</string>
    <string name="reward_failed">Reward video failed to load!try again later</string>
    <string name="adding_failed">Adding points to your account failed!try again later</string>
    <string name="points_added">You received your reward 7 points have been added to your account!</string>
    <string name="reward_loading">Reward video is loading…</string>
    <string name="gps_disabled">GPS is disabled!Please enable it and try again.</string>
    <string name="error_occurred">An error has occurred please try again!</string>
    <string name="search_in">Searching for people in</string>
    <string name="kilometer">Kilometer radius</string>
    <string name="no_users">No Users Found In</string>
    <string name="not_enough">Not Enough Points:</string>
    <string name="not_enough_points">You don\'t have enough points to message this user! 9 points required to message</string>
    <string name="get_points">Get Points!</string>
    <string name="cancel">Cancel</string>
    <string name="signing_in">Signing In!</string>
    <string name="city_hint">Search for a city</string>
    <string name="just_now">Just now</string>
    <string name="minute_ago">A minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">An hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="week_ago">a week ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="month_ago">a month ago</string>
    <string name="months_ago">months ago</string>
    <string name="days_ago">days ago</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="type_message">Type A Message To Send!</string>
    <string name="user_available"> Users Available</string>
    <string name="error_loading_image">Error Loading Profile Image:</string>
    <string name="signed_out">Signed out!</string>
    <string name="picture_updated">Profile Picture Updated!</string>
    <string name="picture_added">Profile Picture Added!</string>
    <string name="hide_me">Hide My Location</string>
    <string name="hide_me_desc">Use 50 points and hide your location from other users.</string>
    <string name="add_order_desc">Use 50 points and add an order?</string>
    <string name="add_order_points">You don\'t have enough points to hide your location! 50 points required.</string>
    <string name="use_points">Use 50 points to hide your location?</string>
    <string name="yes">Yes</string>
    <string name="no_enought_hide">You don\'t have enough points to hide your location! 50 points required</string>
    <string name="location_hidden">Your location is hidden for 24 hours!</string>
    <string name="hidden">Location Hidden</string>
    <string name="location_show">Location Visible</string>
    <string name="orders">Orders</string>
    <string name="add_order">Add an order</string>
    <string name="order_title">Order title</string>
    <string name="order_desc">Order details</string>
    <string name="reward_user">Reward user</string>
    <string name="reward_user_info">Do you want to spend 5 points and reward this user?</string>
    <string name="reward_success">User was rewarded 5 points!</string>
    <string name="order_added">Order Added Successfully!</string>
    <string name="order_failed">Adding Order Failed!</string>
    <string name="view_profile">View user profile</string>
    <string name="message_user">Message user</string>
    <string name="report_order">Report order</string>
    <string name="createAccount">CREATE AN ACCOUNT</string>
    <string name="Sign_in_norm">Sign in</string>
    <string name="add">Add</string>
    <string name="enter_reply">Enter replay…</string>
    <string name="replies">Replies</string>
    <string name="signin_error">An error occurred while signing in please try to sign in again!</string>
    <string name="search">Search</string>
    <string name="or">Or</string>
</resources>
