<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orders_back"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:padding="10dp"
        android:text="@string/search_radius"
        android:textColor="#893EF9"
        app:autoSizeTextType="uniform" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countryBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/replies_back"
            android:gravity="center"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/Country_Radius"
            android:textColor="#FFFFFF"
            app:autoSizeTextType="uniform" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kilometerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/replies_back"
            android:gravity="center"
            android:lines="1"
            android:padding="10dp"
            android:text="@string/Kilometre_Radius"
            android:textColor="#FFFFFF"
            app:autoSizeTextType="uniform" />

    </LinearLayout>
</LinearLayout>